developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/OJSERLIB__PPSRAssetRegistration__c.object-meta.xml
<CustomObject>
    <label>PPSR Asset Registration</label>
    <nameField>
        <label>PPSR Asset Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPSR Asset Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>