developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__ChangeNumber__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ChangeNumber__c</fullName>
    <label>ChangeNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>