developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__Collateral_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Collateral_Class_Type__c</fullName>
    <label>Collateral Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>