developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__CollateralType__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__CollateralType__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MotorVehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>