developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__RegistrationEnd__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegistrationEnd__c</fullName>
    <label>Registration End</label>
    <type>DateTime</type>
</CustomField>