developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegistrationNumber__c</fullName>
    <label>RegistrationNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>