developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__RegistrationStart__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__RegistrationStart__c</fullName>
    <label>RegistrationStart</label>
    <type>DateTime</type>
</CustomField>