developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__Serial_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Serial_Number_Type__c</fullName>
    <label>Serial Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIN</fullName>
            </value>
            <value>
                <fullName>HIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>