developerProject/force-app/main/default/objects/OJSERLIB__PPSRAssetRegistration__c/fields/OJSERLIB__SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__SerialNumber__c</fullName>
    <label>Serial Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>